testsuite/poke.pkl/div-offsets-diag-1.pk
/* { dg-do compile } */

defvar x = 1024UL#b / (2-2)#B;  /* { dg-error "" } */
